--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,12 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       
-      <h1>
-        <a href="{{ "/" | relative_url }}">
-          {{ page.header_text | default: site.title }}
-        </a>
+<h1>
+        {% if page.header_text %}
+          {{ page.header_text }}
+        {% else %}
+          <a href="{{ "/" | relative_url }}">{{ site.title }}</a>
+        {% endif %}
       </h1>
       {{ content }}
       
